# imagen

./: .gitignore  PROJECT_REVIEW.md  README.md  SKILL.md  providers.schema.json
.github/workflows/: tests.yml
references/: cli.md  codex-network.md  image-api.md
skills/imagen/: SKILL.md  providers.example.json  providers.schema.json  pyproject.toml
skills/imagen/references/: cli.md  google-generate-content.md  image-api.md  prompting.md  provider-config.md  sample-prompts.md
skills/imagen/scripts/: imagen.py
skills/imagen/tests/: test_imagen.py
tests/: test_imagen.py
